[workspace]
members = [
    "dividend",
    "donatewithfeedback",
    "dummy",
    "erc20",
    "example1",
    "fairauction",
    "fairroulette",
    "helloworld",
    "inccounter",
    "testcore",
    "tokenregistry",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
