# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "corecontracts",
    "dividend",
    "donatewithfeedback",
    "erc20",
    "erc721",
    "fairauction",
    "fairroulette",
    "helloworld",
    "inccounter",
    "schemacomment",
    "testcore",
    "testwasmlib",
    "timestamp",
    "tokenregistry",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
