# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "corecontracts/rs/corecontracts",
    "corecontracts/rs/corecontractsimpl",
    "corecontracts/rs/corecontractswasm",
    "dividend/rs/dividend",
    "dividend/rs/dividendimpl",
    "dividend/rs/dividendwasm",
    "donatewithfeedback/rs/donatewithfeedback",
    "donatewithfeedback/rs/donatewithfeedbackimpl",
    "donatewithfeedback/rs/donatewithfeedbackwasm",
    "erc20/rs/erc20",
    "erc20/rs/erc20impl",
    "erc20/rs/erc20wasm",
    "erc721/rs/erc721",
    "erc721/rs/erc721impl",
    "erc721/rs/erc721wasm",
    "fairauction/rs/fairauction",
    "fairauction/rs/fairauctionimpl",
    "fairauction/rs/fairauctionwasm",
    "fairroulette/rs/fairroulette",
    "fairroulette/rs/fairrouletteimpl",
    "fairroulette/rs/fairroulettewasm",
    "gascalibration/executiontime/rs/executiontime",
    "gascalibration/executiontime/rs/executiontimeimpl",
    "gascalibration/executiontime/rs/executiontimewasm",
    "gascalibration/memory/rs/memory",
    "gascalibration/memory/rs/memoryimpl",
    "gascalibration/memory/rs/memorywasm",
    "gascalibration/storage/rs/storage",
    "gascalibration/storage/rs/storageimpl",
    "gascalibration/storage/rs/storagewasm",
    "helloworld/rs/helloworld",
    "helloworld/rs/helloworldimpl",
    "helloworld/rs/helloworldwasm",
    "inccounter/rs/inccounter",
    "inccounter/rs/inccounterimpl",
    "inccounter/rs/inccounterwasm",
    "schemacomment/rs/schemacomment",
    "schemacomment/rs/schemacommentimpl",
    "schemacomment/rs/schemacommentwasm",
    "testcore/rs/testcore",
    "testcore/rs/testcoreimpl",
    "testcore/rs/testcorewasm",
    "testwasmlib/rs/testwasmlib",
    "testwasmlib/rs/testwasmlibimpl",
    "testwasmlib/rs/testwasmlibwasm",
    "timestamp/rs/timestamp",
    "timestamp/rs/timestampimpl",
    "timestamp/rs/timestampwasm",
    "tokenregistry/rs/tokenregistry",
    "tokenregistry/rs/tokenregistryimpl",
    "tokenregistry/rs/tokenregistrywasm",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
