[package]
name = "timestamp"
description = "Extremely simple timestamp server"
license = "Apache-2.0"
version = "0.1.0"
authors = ["John Doe <john@doe.org>"]
edition = "2021"
repository = "https://github.com/iotaledger/wasp"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasmlib = { path = "../../../packages/wasmvm/wasmlib" }
wasmvmhost = { path = "../../../packages/wasmvm/wasmvmhost" }
#wasmlib = { git = "https://github.com/iotaledger/wasp", branch = "develop" }
#wasmvmhost = { git = "https://github.com/iotaledger/wasp", branch = "develop" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
