[package]
name = "erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.14", features = [
    "eips",
    "full",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
alloy-eips = "0.14.0"
alloy-primitives = "1.0.0"
alloy-signer = "0.15.5"
alloy-sol-types = "1.0.0"
eyre = "0.6.12"
hex = "0.4.3"
reqwest = "0.12.15"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

