# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fairroulette"
description = ""
license = "Apache-2.0"
version = "0.1.0"
authors = ["Eric Hop <eric@iota.org>"]
edition = "2021"
repository = "https://github.com/iotaledger/wasp"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmlib = { path = "../../../../../packages/wasmvm/wasmlib" }
# wasmlib = { git = "https://github.com/iotaledger/wasp/packages/wasmvm/wasmlib", branch = "develop" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
